버튼크기 수정 및마크업 수정

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <body>
     <!--<script async src= "./js/main.js"></script>-->
     <div class= "contents">
-      <img src="./imgs/imgs/logo.png" alt="" class="logo">
-
+      <div class="logo"> <img src="./imgs/imgs/logo.png" alt="" ></img>
+      </div>  
       <section class= "buttons">
         <button class="imgBtn">
           <img src="./imgs/imgs/blue_t.png" alt="t-shirts" > 
@@ -29,8 +29,32 @@
       
       <ul class= "items">
         <li class= "item">
-          <img src="./imgs/imgs/pink_t.png" alt="">
-          <span>female, large size</span>
+          <img src="./imgs/imgs/pink_t.png" alt="tshirts">
+          <span class= "description" >female, large size</span>
+        </li>
+        <li class= "item">
+          <img src="./imgs/imgs/pink_t.png" alt="tshirts">
+          <span class= "description" >female, large size</span>
+        </li>
+        <li class= "item">
+          <img src="./imgs/imgs/pink_t.png" alt="tshirts">
+          <span class= "description" >female, large size</span>
+        </li>
+        <li class= "item">
+          <img src="./imgs/imgs/pink_t.png" alt="tshirts">
+          <span class= "description" >female, large size</span>
+        </li>
+        <li class= "item">
+          <img src="./imgs/imgs/pink_t.png" alt="tshirts">
+          <span class= "description" >female, large size</span>
+        </li>
+        <li class= "item">
+          <img src="./imgs/imgs/pink_t.png" alt="tshirts">
+          <span class= "description" >female, large size</span>
+        </li>
+           <li class= "item">
+          <img src="./imgs/imgs/pink_t.png" alt="tshirts">
+          <span class= "description" >female, large size</span>
         </li>
       </ul>
     </div>
