아이템 이미지 동적 생성

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   
   <body>
-    <!--<script async src= "./js/main.js"></script>-->
+    <script async src= "./js/main.js"></script>
     <div class= "contents">
       <div class="logo"> <img src="./imgs/imgs/logo.png" alt="" ></img>
       </div>  
@@ -28,34 +28,6 @@
       </section>
       
       <ul class= "items">
-        <li class= "item">
-          <img src="./imgs/imgs/pink_t.png" alt="tshirts">
-          <span class= "description" >female, large size</span>
-        </li>
-        <li class= "item">
-          <img src="./imgs/imgs/pink_t.png" alt="tshirts">
-          <span class= "description" >female, large size</span>
-        </li>
-        <li class= "item">
-          <img src="./imgs/imgs/pink_t.png" alt="tshirts">
-          <span class= "description" >female, large size</span>
-        </li>
-        <li class= "item">
-          <img src="./imgs/imgs/pink_t.png" alt="tshirts">
-          <span class= "description" >female, large size</span>
-        </li>
-        <li class= "item">
-          <img src="./imgs/imgs/pink_t.png" alt="tshirts">
-          <span class= "description" >female, large size</span>
-        </li>
-        <li class= "item">
-          <img src="./imgs/imgs/pink_t.png" alt="tshirts">
-          <span class= "description" >female, large size</span>
-        </li>
-           <li class= "item">
-          <img src="./imgs/imgs/pink_t.png" alt="tshirts">
-          <span class= "description" >female, large size</span>
-        </li>
       </ul>
     </div>
   </body>
