색깔별, 타입별로 보여주기

--- a/index.html
+++ b/index.html
@@ -13,18 +13,18 @@
       <div class="logo"> <img src="./imgs/imgs/logo.png" alt="" ></img>
       </div>  
       <section class= "buttons">
-        <button class="imgBtn">
-          <img src="./imgs/imgs/blue_t.png" alt="t-shirts" > 
+        <button class="imgBtn" alt="tshirts"    >
+          <img src="./imgs/imgs/blue_t.png" data-key="type" data-value="tshirts"> 
+        </button>
+        <button class="imgBtn" >
+          <img src="./imgs/imgs/blue_s.png" alt="skirts" data-key="type" data-value="skirt" >
         </button>
         <button class="imgBtn">
-          <img src="./imgs/imgs/blue_s.png" alt="skirts" >
+          <img src="./imgs/imgs/blue_p.png" alt="pants" data-key="type" data-value="pants">
         </button>
-        <button class="imgBtn">
-          <img src="./imgs/imgs/blue_p.png" alt="pants" >
-        </button>
-        <button class= "colorBtn blue">Blue</button>
-        <button class= "colorBtn yellow">Yellow</button>
-        <button class= "colorBtn pink">Pink</button>
+        <button class= "colorBtn blue" data-key="color" data-value="blue">Blue</button>
+        <button class= "colorBtn yellow" data-key="color" data-value="yellow">Yellow</button>
+        <button class= "colorBtn pink" data-key="color" data-value="pink">Pink</button>
       </section>
       
       <ul class= "items">
